--- a/src/package.json
+++ b/src/package.json
@@ -1,6 +1,6 @@
 {
   "name": "ng4-resti",
-  "version": "0.2.4",
+  "version": "0.3.0",
   "repository": {
     "type": "git",
     "url": "https://github.com/IARayan/ng4-resti"
@@ -19,8 +19,8 @@
   "module": "ng4-resti.js",
   "typings": "ng4-resti.d.ts",
   "peerDependencies": {
-    "@angular/core": "^4.0.0",
-    "rxjs": "^5.1.0",
-    "zone.js": "^0.8.4"
+    "@angular/core": "~4.0.0",
+    "rxjs": "~5.0.0",
+    "zone.js": "~0.8.4"
   }
 }
